Fix center alignment for title cards

--- a/themes/cdap/assets/scss/components/section-why.scss
+++ b/themes/cdap/assets/scss/components/section-why.scss
@@ -22,6 +22,7 @@
     color: $greyish-brown;
     width: 70%;
     margin: 0;
+    min-height: 64px;
 
     @include media-breakpoint-down(md) {
       width: 60%;
